--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
+    "helmet": "8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
-    "helmet": "8.1.0"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
