upload image to the aws s3 and use cloudfront

--- a/server/.sample.env
+++ b/server/.sample.env
@@ -2,3 +2,9 @@ ALLOWED_URLS=
 PORT=
 JWT_SECRET=
 JWT_EXPIRY=
+MONGODB_URL=
+BUCKET_NAME=
+DEFAULT_REGION=
+ACCESS_KEY_ID=
+SECRET_ACCESS_KEY=
+CLOUDFRONT=
